--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid fa-home" href="index.html"><span>Introduction</span></a></li>
+									<li><a class="icon solid fa-home" href="index.html"><span>简介</span></a></li>
 									<li>
-										<a href="#" class="icon fa-chart-bar"><span>Dropdown</span></a>
+										<a href="#" class="icon fa-chart-bar"><span>资料汇总</span></a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
+											<li><a href="#">自然语言处理工具</a></li>
+											<li><a href="#">统计推断与因果分析工具</a></li>
+											<li><a href="#">可视化工具</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
+												<a href="#">论文库</a>
 												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
+													<li><a href="#">经典著作</a></li>
+													<li><a href="#">领域论文</a></li>
+													<li><a href="#">新传读书会</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">工作效率工具</a></li>
 										</ul>
 									</li>
-									<li><a class="icon solid fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+									<li><a class="icon solid fa-cog" href="left-sidebar.html"><span>论文发表</span></a></li>
+									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Wiki百科</span></a></li>
+									<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>海底捞小组成员风采展示</span></a></li>
 								</ul>
 							</nav>
 
@@ -56,7 +56,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
+							<h2>大家好，这里是 <strong>塔门</strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -65,11 +65,12 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h3>Okay, so what is this?</h3>
+											<h3>我们是谁</h3>
 										</header>
-										<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
+										<p>我们是一群小可爱</p>
+										<!-- <p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
 										by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p> -->
 									</section>
 
 							</div>
@@ -79,11 +80,12 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Nice! What is HTML5 UP?</h3>
+											<h3>我们爱什么？</h3>
 										</header>
-										<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
+										<p>爱国爱党爱科研</p>
+										<!-- <p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
 										I started it as a way to both test my responsive tools and sharpen up my coding
-										and design skills a bit.</p>
+										and design skills a bit.</p> -->
 									</section>
 
 							</div>
@@ -93,16 +95,17 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>What's this built with?</h3>
+											<h3>关于这个小空间</h3>
 										</header>
-										<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+										<p>我们的外接大脑知识库</p>
+										<!-- <p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
+										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p> -->
 									</section>
 
 							</div>
 							<div class="col-12">
 								<ul class="actions">
-									<li><a href="#" class="button icon solid fa-file">Tell Me More</a></li>
+									<li><a href="#" class="button icon solid fa-file">查看更多</a></li>
 								</ul>
 							</div>
 						</div>
@@ -112,8 +115,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p>Use this space for <strong>profound thoughts</strong>.<br />
-						Or an enormous ad. Whatever.</p>
+						<p>塔门<strong>大事记</strong>.<br /></p>
 					</div>
 				</section>
 
@@ -128,27 +130,21 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
-												but it’s the aliens.</a></h2>
+												<h2><a href="#">一个可爱的 <strong>时间轴</strong> ...<br />
+												记载重要的事情.</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>I mean isn't it possible?</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in tristique.</p>
+											<h3>娜姐加薪了</h3>
+											<p>在新的一年里，我们都加薪了，中彩票了，发财了<br>
+											<br>
+										<br></p>
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
 										</article>
 
 									<!-- Post -->
-										<article class="box post">
+										<!-- <article class="box post">
 											<header>
 												<h2><a href="#">By the way, many thanks to <strong>regularjane</strong>
 												for these awesome demo photos</a></h2>
@@ -177,7 +173,7 @@
 											<ul class="actions">
 												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
 											</ul>
-										</article>
+										</article> -->
 
 								</div>
 
@@ -193,10 +189,9 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">July 30</span>
-																<h3><a href="#">Just another post</a></h3>
+																<h3><a href="#">蘑菇教授升职加薪</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>xxxxxx<br></p>
 														</article>
 
 												</li>
@@ -206,10 +201,9 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">July 28</span>
-																<h3><a href="#">And another post</a></h3>
+																<h3><a href="#">浩哥顺利毕业</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>xxxxxx<br></p>
 														</article>
 
 												</li>
@@ -219,10 +213,9 @@
 														<article class="box excerpt">
 															<header>
 																<span class="date">July 24</span>
-																<h3><a href="#">One more post</a></h3>
+																<h3><a href="#">小芳荣归故里</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>xxxxxx<br></p>
 														</article>
 
 												</li>
@@ -281,7 +274,7 @@
 				<section id="footer">
 					<div class="container">
 						<header>
-							<h2>Questions or comments? <strong>Get in touch:</strong></h2>
+							<h2>对我们感兴趣或寻求合作？ <strong>联系我们:</strong></h2>
 						</header>
 						<div class="row">
 							<div class="col-6 col-12-medium">
@@ -306,22 +299,20 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p>有志于新闻传播研究，计算传播学小伙伴。共同探讨新传新范式，研究数字新闻，社科因果发现，为人类社会贡献知识，认识有趣的人！</p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
-													USA
+													中国人民大学，明德楼7楼<br />
+													海淀区<br />
+													北京市
 												</li>
 												<li class="icon solid fa-phone">
 													(000) 000-0000
 												</li>
 												<li class="icon solid fa-envelope">
-													<a href="#">info@untitled.tld</a>
+													<a href="#">kaiyuleethu@gmail.com</a>
 												</li>
 											</ul>
 										</div>
@@ -348,7 +339,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">Kaiyuli</a></li>
 						</ul>
 					</div>
 				</section>
