--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 										</section>
 
 									<!-- Highlights -->
-										<section>
+										<!-- <section>
 											<ul class="divided">
 												<li>
 
-													<!-- Highlight -->
+													
 														<article class="box highlight">
 															<header>
 																<h3><a href="#">Something of note</a></h3>
@@ -245,7 +245,7 @@
 												</li>
 												<li>
 
-													<!-- Highlight -->
+												
 														<article class="box highlight">
 															<header>
 																<h3><a href="#">Something of less note</a></h3>
@@ -262,7 +262,7 @@
 
 												</li>
 											</ul>
-										</section>
+										</section> -->
 
 								</div>
 
