--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>RUC-新传</title>
+		<title>DoHits</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">RUC新传小组的小空间</a></h1>
+							<h1 id="logo"><a href="index.html">DoHits: An Enriched Dataset of Douyin Hit Songs for Music Preference Study</a></h1>
 							<p>来了老弟？</p>
 
 						<!-- Nav -->
@@ -227,7 +227,7 @@
 											<ul class="divided">
 												<li>
 
-													
+
 														<article class="box highlight">
 															<header>
 																<h3><a href="#">Something of note</a></h3>
@@ -245,7 +245,7 @@
 												</li>
 												<li>
 
-												
+
 														<article class="box highlight">
 															<header>
 																<h3><a href="#">Something of less note</a></h3>
