--- a/index.html
+++ b/index.html
@@ -19,33 +19,23 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">DoHits: An Enriched Dataset of Douyin Hit Songs for Music Preference Study</a></h1>
+							<h5 id="logo"><a href="index.html">DoHits: An Enriched Dataset of Douyin Hit Songs for Music Preference Study</a></h5>
 							<p>来了老弟？</p>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid fa-home" href="index.html"><span>简介</span></a></li>
+									<li><a class="icon solid fa-home" href="index.html"><span>Description</span></a></li>
 									<li>
-										<a href="#" class="icon fa-chart-bar"><span>资料汇总</span></a>
+										<a href="#" class="icon fa-chart-bar"><span>Results on DoHits</span></a>
 										<ul>
-											<li><a href="#">自然语言处理工具</a></li>
-											<li><a href="#">统计推断与因果分析工具</a></li>
-											<li><a href="#">可视化工具</a></li>
-											<li>
-												<a href="#">论文库</a>
-												<ul>
-													<li><a href="#">经典著作</a></li>
-													<li><a href="#">领域论文</a></li>
-													<li><a href="#">新传读书会</a></li>
-												</ul>
-											</li>
-											<li><a href="#">工作效率工具</a></li>
+											<li><a href="#">Regression Analyses</a></li>
+											<li><a href="#">Machine Learning</a></li>
+											<li><a href="#">Causal Effect</a></li>
 										</ul>
 									</li>
-									<li><a class="icon solid fa-cog" href="left-sidebar.html"><span>论文发表</span></a></li>
-									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Wiki百科</span></a></li>
-									<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>海底捞小组成员风采展示</span></a></li>
+									<li><a class="icon solid fa-cog" href="left-sidebar.html"><span>Code</span></a></li>
+									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Usecase</span></a></li>
 								</ul>
 							</nav>
 
@@ -56,7 +46,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>大家好，这里是 <strong>塔门</strong>!</h2>
+							<h2>Welcome to access<strong>Dohits</strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -97,7 +87,7 @@
 										<header>
 											<h3>关于这个小空间</h3>
 										</header>
-										<p>我们的外接大脑知识库</p>
+										<p>我们</p>
 										<!-- <p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
 										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p> -->
 									</section>
@@ -115,7 +105,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p>塔门<strong>大事记</strong>.<br /></p>
+						<p>Parts of <strong>Results</strong>.<br /></p>
 					</div>
 				</section>
 
@@ -130,12 +120,12 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">一个可爱的 <strong>时间轴</strong> ...<br />
-												记载重要的事情.</a></h2>
+												<h2><a href="#">We have employ many <strong>algorithms</strong> ...<br />
+												on DoHits</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>娜姐加薪了</h3>
-											<p>在新的一年里，我们都加薪了，中彩票了，发财了<br>
+											<h3>The results show that</h3>
+											<p>Dohits have many poteintial applications<br>
 											<br>
 										<br></p>
 											<ul class="actions">
@@ -188,10 +178,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 30</span>
-																<h3><a href="#">蘑菇教授升职加薪</a></h3>
+																<span class="date">Regression Analysis</span>
+																<h3><a href="#">Good results</a></h3>
 															</header>
-															<p>xxxxxx<br></p>
+															<p>Many variables are relevant<br></p>
 														</article>
 
 												</li>
@@ -200,10 +190,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 28</span>
-																<h3><a href="#">浩哥顺利毕业</a></h3>
+																<span class="date">Machine Learning Algorithms</span>
+																<h3><a href="#">Not so good</a></h3>
 															</header>
-															<p>xxxxxx<br></p>
+															<p>There are no magic formula<br></p>
 														</article>
 
 												</li>
@@ -212,10 +202,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 24</span>
-																<h3><a href="#">小芳荣归故里</a></h3>
+																<span class="date">Causal Analyses</span>
+																<h3><a href="#">Good results</a></h3>
 															</header>
-															<p>xxxxxx<br></p>
+															<p>many internal features contribute to the results<br></p>
 														</article>
 
 												</li>
@@ -274,7 +264,7 @@
 				<section id="footer">
 					<div class="container">
 						<header>
-							<h2>对我们感兴趣或寻求合作？ <strong>联系我们:</strong></h2>
+							<h2>Interested？ <strong>Contact Us:</strong></h2>
 						</header>
 						<div class="row">
 							<div class="col-6 col-12-medium">
