--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h5 id="logo"><a href="index.html">DoHits: An Enriched Dataset of Douyin Hit Songs for Music Preference Study</a></h5>
-							<p>来了老弟？</p>
+							<h2 id="logo"><a href="index.html">DoHits: An Enriched Dataset of Douyin Hit Songs for Music Preference Study</a></h2>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -38,15 +37,18 @@
 									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Usecase</span></a></li>
 								</ul>
 							</nav>
-
+							<iframe width="820" height="515"
+								src="https://douyin-data-storage.oss-us-west-1.aliyuncs.com/dataset.mp4">
+							</iframe>
 					</div>
+
 				</section>
 
 			<!-- Features -->
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Welcome to access<strong>Dohits</strong>!</h2>
+							<h2>Interesting Use <strong>Cases</strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -55,9 +57,8 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h3>我们是谁</h3>
+											<h3>Music Preference</h3>
 										</header>
-										<p>我们是一群小可爱</p>
 										<!-- <p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
 										by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
 										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p> -->
@@ -70,9 +71,8 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>我们爱什么？</h3>
+											<h3>Platformization</h3>
 										</header>
-										<p>爱国爱党爱科研</p>
 										<!-- <p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
 										I started it as a way to both test my responsive tools and sharpen up my coding
 										and design skills a bit.</p> -->
@@ -85,9 +85,8 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>关于这个小空间</h3>
+											<h3>Machine Learning Task</h3>
 										</header>
-										<p>我们</p>
 										<!-- <p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
 										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p> -->
 									</section>
