--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
 									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Usecase</span></a></li>
 								</ul>
 							</nav>
-							<iframe width="820" height="515"
-								src="https://douyin-data-storage.oss-us-west-1.aliyuncs.com/dataset.mp4">
-							</iframe>
+							<video
+							      controls
+										width="1020" height="815"
+							      src="https://douyin-data-storage.oss-us-west-1.aliyuncs.com/dataset.mp4"
+							      poster="https://assets.pandaily.com/uploads/2020/04/douyin-ecommerce.png"
+							></video>
 					</div>
 
 				</section>
