--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h2 id="logo"><a href="index.html">DoHits: An Enriched Dataset of Douyin Hit Songs for Music Preference Study</a></h2>
+						<h2>ITEC 4020</h2>
+							<!-- <h2 id="logo"><a href="index.html">DoHits: An Enriched Dataset of Douyin Hit Songs for Music Preference Study</a></h2> -->
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
